refactor(cs): apply code review suggestions for getMemberClientOfServers